--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/client-account": "^3.821.0",
+    "@aws-sdk/client-cost-explorer": "^3.821.0",
+    "@aws-sdk/client-dynamodb": "^3.821.0",
+    "@aws-sdk/client-ec2": "^3.826.0",
+    "@aws-sdk/client-ecs": "^3.821.0",
+    "@aws-sdk/client-s3": "^3.826.0",
+    "@aws-sdk/client-sns": "^3.821.0",
+    "@google/genai": "^1.4.0",
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^6.0.0"
+    "express-rate-limit": "^6.0.0",
+    "stream-chain": "^3.4.0",
+    "stream-json": "^1.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
