--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-ebs": "^3.828.0",
     "@aws-sdk/client-ec2": "^3.826.0",
     "@aws-sdk/client-ecs": "^3.821.0",
+    "@aws-sdk/client-route53resolver": "^3.828.0",
     "@aws-sdk/client-s3": "^3.826.0",
     "@aws-sdk/client-sns": "^3.821.0",
     "@google/genai": "^1.4.0",
